[metadata]
license_file = LICENSE
name = hgtools
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Classes and setuptools plugin for Mercurial and Git repositories
long_description = file:README.rst
url = https://github.com/jaraco/hgtools
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development :: Version Control
	Framework :: Setuptools Plugin

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	# jaraco/skeleton#22
	jaraco.test >= 3.2.0

	# local
	backports.unittest_mock
	pygments

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
setuptools.file_finders =
	hg = hgtools.plugins:file_finder

distutils.setup_keywords =
	use_hg_version = hgtools.plugins:version_calc
	use_vcs_version = hgtools.plugins:version_calc
